--- a/frontend/src/app/components/navigation/home-page/home-page.component.html
+++ b/frontend/src/app/components/navigation/home-page/home-page.component.html
@@ -1,1 +1,6 @@
 <p>home-page works!</p>
+
+<div *ngIf="authService.isLoggedIn$ | async as isLoggedIn">
+    <p *ngIf="isLoggedIn">Witaj, {{ authService.getParsedToken().role}}!</p>
+  </div>
+
