--- a/frontend/src/app/components/navigation/home-page/home-page.component.html
+++ b/frontend/src/app/components/navigation/home-page/home-page.component.html
@@ -3,7 +3,8 @@
 <div *ngIf="roles">Roles: {{ roles }}</div>
 
 <div *ngIf="authService.isLoggedIn$ | async as isLoggedIn">
-    <p *ngIf="isLoggedIn">Witaj, {{ authService.getParsedToken().role}}!<br>
+  <button (click)="logout()">Logout</button>
+    <p *ngIf="isLoggedIn">Hello, {{ authService.getParsedToken().role}}!<br>
       currdate: {{currentDate}}<br>
       exp date:  {{ exp}}
     </p>
