--- a/frontend/src/app/components/register/register/register.component.html
+++ b/frontend/src/app/components/register/register/register.component.html
@@ -4,7 +4,7 @@
         <div >
             <label>NickName: <input formControlName="nickName" type="text" pInputText placeholder="nickName"></label>
         </div>
-        <div class="error-messages error" *ngIf="registerForm.controls.nickName.invalid && (registerForm.controls.nickName.dirty || registerForm.controls.nickName.touched)">
+        <div class="error-messages" *ngIf="registerForm.controls.nickName.invalid && (registerForm.controls.nickName.dirty || registerForm.controls.nickName.touched)">
             <small *ngIf="registerForm.controls.nickName.errors?.['required']">
                 NickName is required.
             </small>
@@ -12,7 +12,7 @@
         <div >
             <label>Email: <input formControlName="email" type="text" pInputText placeholder="Email"></label>
         </div>
-        <div class="error-messages error" *ngIf="registerForm.controls.email.invalid && (registerForm.controls.email.dirty || registerForm.controls.email.touched)"> 
+        <div class="error-messages" *ngIf="registerForm.controls.email.invalid && (registerForm.controls.email.dirty || registerForm.controls.email.touched)"> 
             <small *ngIf="registerForm.controls.email.errors?.['email']">
                 Enter valid email.
             </small>
@@ -23,7 +23,7 @@
         <div>
             <label>Password: <input formControlName="password" type="password" pInputText placeholder="Password"></label>
         </div>
-        <div class="error-messages error" *ngIf="registerForm.controls.password.invalid && (registerForm.controls.password.dirty || registerForm.controls.password.touched)"> 
+        <div class="error-messages" *ngIf="registerForm.controls.password.invalid && (registerForm.controls.password.dirty || registerForm.controls.password.touched)"> 
             <small *ngIf="registerForm.controls.password.errors?.['required']">
                 Password is required.
             </small>
@@ -34,19 +34,19 @@
         <div>
             <label>Confirm Password: <input formControlName="confirmPassword" type="password" pInputText placeholder="Confirm Password"></label>
         </div>
-        <div class="error-messages error" *ngIf="registerForm.controls.confirmPassword.invalid && (registerForm.controls.confirmPassword.dirty || registerForm.controls.confirmPassword.touched)"> 
+        <div class="error-messages" *ngIf="registerForm.controls.confirmPassword.invalid && (registerForm.controls.confirmPassword.dirty || registerForm.controls.confirmPassword.touched)"> 
             <small *ngIf="registerForm.controls.confirmPassword.errors?.['required']">
                 Confirm Password is required.
             </small>
-            <small *ngIf="registerForm.controls.confirmPassword.errors?.['passNotMatch']">
-                Passwords are diffrent.
-            </small>
         </div>
-        <div>
-            <small *ngIf="registerForm.errors?.['passNotMatch']">
+        <div *ngIf="registerForm.errors?.['passNotMatch']">
+            <small>
                 Passwords are diffrent.
             </small> 
-        </div>  
+        </div> 
+        <div *ngIf="registerForm.errors?.['generalError']">
+            <small class="error-message">User already exist.</small>
+        </div> 
         <button type="submit">Register</button>
         <button mat-button routerLink="/login" routerLinkActive="active">
             Already have an account? Login here.
