add message service and  final register form

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
         </div>
         <button type="submit">Log in</button>
     </form> 
-    <button mat-button routerLink="/register" routerLinkActive="active">
+    <button pbutton [routerLink]="['/register']">
         Don't have an account? Register here. 
     </button>
 </div>
