--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,9 @@
+
 <div class="content">
   <router-outlet></router-outlet>
 </div>
+<!-- <p-confirmDialog acceptLabel="Tak" rejectLabel="Nie" defaultFocus="reject"></p-confirmDialog> -->
+<p-toast position="top-right"></p-toast> <!-- Monitoruje zmiany w komunikatach dodanych za pomoca messageService i je renderuje , tak by użytkownik je zobzcyl-->
 
 <footer>
   © Natalia Kolbusz
