--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,31 +1,34 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" [routerLink]="['/home']">
-      <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
-      Board Game App</a>
-    <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" [routerLink]="['/home']">Home</a>
-        </li>
-         <ng-container *ngIf="(isLoggedIn$ | async) as isLoggedIn">
-          <li class="nav-item logout-link">
-            <a class="nav-link" (click)="logout()">Logout</a>
-          </li>
-        </ng-container>
-        <ng-container *ngIf="!(isLoggedIn$ | async)">
+<nav class="navbar navbar-expand-lg bg-dark-gray">
+    <div class="container-fluid">
+      <a class="navbar-brand text-light" [routerLink]="['/home']">
+        <img src="..\..\..\assets\images\logott.png" alt="Logo" class="logo" width="30">
+        Board Game App</a>
+      <button class="navbar-toggler custom-toggler-icon text-light" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/login']">Login</a>
+            <a class="nav-link active text-light  " aria-current="page" [routerLink]="['/home']">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/register']">Register</a>
-          </li>
-        </ng-container>
-      </ul>
+        </ul>
+        <ul class="navbar-nav mb-2 mb-lg-0">
+          <ng-container *ngIf="(isLoggedIn$ | async) as isLoggedIn">
+            <li class="nav-item logout-link">
+              <a class="nav-link text-light" (click)="logout()">Logout</a>
+            </li>
+          </ng-container>
+          <ng-container *ngIf="!(isLoggedIn$ | async)">
+            <li class="nav-item">
+              <a class="nav-link text-light" [routerLink]="['/login']">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-light" [routerLink]="['/register']">Register</a>
+            </li>
+          </ng-container>
+        </ul>
+      </div>
     </div>
-  </div>
 </nav>
+
 
