--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<div class="wrapper">
 <div>
   <app-navbar></app-navbar>
 </div>
@@ -11,3 +12,4 @@
 <footer>
   © Natalia Kolbusz
 </footer>
+</div>
