--- a/frontend/src/app/components/login/login.component.css
+++ b/frontend/src/app/components/login/login.component.css
@@ -72,3 +72,15 @@
     color: #f55a5a; 
     margin: 0 0 5px 0;
 } 
+
+@media only screen and (min-width: 601px) and (max-width: 1000px) {
+    .container{
+        width: 60%; 
+    }    
+}
+
+@media only screen and (max-width: 600px) {
+    .container{
+        width: 80%; 
+    }    
+}
