--- a/frontend/src/app/components/register/register.component.html
+++ b/frontend/src/app/components/register/register.component.html
@@ -1,8 +1,4 @@
 <div class = "container">
-    <!-- <ul>
-        <li class="select active"><a [routerLink]="['/register']">Sign up</a></li>
-        <li class="select"><a [routerLink]="['/login']">Log In</a></li>
-    </ul> -->
     <form [formGroup]="registerForm" (ngSubmit)="registerUser()">
         <!-- <form [formGroup]="registerForm" (ngSubmit)="registerUser()" errorTailor> -->
         <h2>Sign up</h2>
@@ -26,7 +22,8 @@
             </small>
         </div>
         <div class="label">
-            <label >Password: <input formControlName="password" type="password" pInputText placeholder="Password"></label>
+            <label >Password: <input formControlName="password" type="password" placeholder="Password"></label>
+        
         </div>
         <div class="error-messages" *ngIf="registerForm.controls.password.invalid && (registerForm.controls.password.dirty || registerForm.controls.password.touched)"> 
             <small *ngIf="registerForm.controls.password.errors?.['required']">
@@ -37,7 +34,7 @@
             </small>
         </div>
         <div class="label">
-            <label>Confirm Password: <input formControlName="confirmPassword" type="password" pInputText placeholder="Confirm Password"></label>
+            <label>Confirm Password: <input formControlName="confirmPassword" type="password" placeholder="Confirm Password"></label>
         </div>
         <div class="error-messages" *ngIf="registerForm.controls.confirmPassword.invalid && (registerForm.controls.confirmPassword.dirty || registerForm.controls.confirmPassword.touched)"> 
             <small *ngIf="registerForm.controls.confirmPassword.errors?.['required']">
