--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -7,12 +7,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div [ngbCollapse]="isNavbarCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-1 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active text-light  " aria-current="page" [routerLink]="['/home']">Home</a>
+            <a class="nav-link active text-light " aria-current="page" [routerLink]="['/home']">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-light  " [routerLink]="['/games']">Games</a>
           </li>
         </ul>
-        <ul class="navbar-nav mb-2 mb-lg-0">
+        <ul class="navbar-nav mb-1 mb-lg-0">
           <ng-container *ngIf="(isLoggedIn$ | async) as isLoggedIn">
             <li class="nav-item logout-link">
               <a class="nav-link text-light" (click)="logout()">Logout</a>
