--- a/frontend/src/app/components/register/register.component.css
+++ b/frontend/src/app/components/register/register.component.css
@@ -5,18 +5,22 @@
     transform: translate(-50%, -50%);
     width: 500px; 
     height: auto;
-    background-color:#333333;
+    background-color:#ffffff;
+    border: 1.5px solid #c7c7c7;
     padding: 30px;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: 0 40px 40px 0 rgba(0, 0, 0, 0.2); 
 }
 
 .container h2{
     text-align: center;
-    color: #ffffff;
-    border-bottom: 2px solid #777676; 
+    color: #000000;
+    border-bottom: 2px solid #cacaca; 
     padding-bottom: 10px;
     margin-bottom: 20px;
+}
+input::placeholder {
+    color: #a5a5a5; 
 }
 
 .container .label{
@@ -26,16 +30,16 @@
 
 .container .label label {
     width: 100%;
-    color: #ffffff;
+    color: #000000;
 }
 
 .container input{
     width: 100%;
     padding: 5px; 
-    background-color: #777676 ;
+    background-color: #ffffff ;
     border-radius: 5px;
-    border: 1px solid #777676;
-    color: #ffffff;
+    border: 1px solid #8d8d8d;
+    color: #000000;
 
 }
 
@@ -43,7 +47,7 @@
 .container button[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #3B82F6;;
     color: white;
     border: none;
     border-radius: 5px;
@@ -51,25 +55,25 @@
 }
 
 .container button[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: #4f90f8;
 }
 
 .container .link {
     display: block;
     text-align: center;
-    color: #ffffff;
+    color: #000000;
     text-decoration: underline; 
     cursor: pointer; 
     margin-top: 20px;
 }
 
 .container .link:hover {
-    color: #cccccc; 
+    color: #6e6e6e; 
 }
 
 .container .error-messages small{
     display: block;
-    color: #f55a5a; 
+    color: #ff5252; 
     margin: 0 0 5px 0;
 } 
 
@@ -86,45 +90,4 @@
     }    
 }
 
-/* 
 
-
-
-.form input[type="text"]:focus, .form input[type="password"]:focus {
-    border: 1px solid #4CAF50;
-}
-
-.form input[type="text"]::placeholder, .form input[type="password"]::placeholder {
-    color: transparent;
-}
-
-.form input[type="text"]:focus::placeholder, .form input[type="password"]:focus::placeholder {
-    color: #666;
-}
-
-
-.form input[type="text"], .form input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-}
-
-.form button[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.form button[type="submit"]:hover {
-    background-color: #45a049;
-}
-
-.form .error-messages {
-    color: red;
-    font-size: 12px;
-} */
