--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,9 +1,15 @@
+@import "font-awesome/css/font-awesome.min.css";
+@import '~primeicons/primeicons.css';
+@import "primeng/resources/primeng.min.css";
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+
+
 body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  background-color: #4b4b4b; 
-  color: white;
+  background-color: #ffffff; 
+  color: rgb(0, 0, 0);
   width: 100%;
   height: 100%;
 }
