change theme color

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -12,8 +12,8 @@
   }
   
   footer {
-    background-color: #94b883;
-    color: #000000;
+    background-color: #2b3186;
+    color: #ffffff;
     text-align: center;
     padding: 10px;
   }
