--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -1,4 +1,34 @@
+.game-description{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.data-box{
+    padding: 2rem;
+    width: 100%;
+    height: 100%;
+}
 
+.game-list-item{
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+}
+.image-box{
+    padding: 1rem;
+
+}
+img{
+    border-radius: 5%;
+    object-fit: cover;
+    box-shadow: 5px 5px 5px #797878;
+
+}
+
+
+/* 
     .p-dropdown {
         width: 14rem;
         font-weight: normal;
@@ -126,4 +156,4 @@
 			width: 100%;
 		}
 	}
-}
+} */
