--- a/frontend/src/app/components/game/game.component.css
+++ b/frontend/src/app/components/game/game.component.css
@@ -1,10 +1,3 @@
-.game-description{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-}
 .data-box{
     padding: 2rem;
     width: 100%;
@@ -16,18 +9,107 @@
     padding: 1rem;
     display: flex;
 }
-.image-box{
+
+.game-list-item .image-box{
     padding: 1rem;
+    width: 15%;
 
 }
-img{
+
+.game-list-item img{
+    width: 100%;
     border-radius: 5%;
     object-fit: cover;
-    box-shadow: 5px 5px 5px #797878;
-
+    transition: background-color 0.3s;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5); 
 }
 
+.game-list-item .game-list-detail{
+    flex: 1;
+    padding: 1.1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
 
+.game-list-item .game-list-action{
+    padding: 1.1rem 1rem;
+}
+
+.game-list-detail .game-name{
+    margin-bottom: 0.4rem;
+    font-weight: bold;
+    font-size: larger;
+    color: #3c3c3d;
+}
+.game-publisher-icon{
+    margin-bottom: 1rem;;
+}
+
+.game-list-detail .game-description{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.game-list-action {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.game-list-detail .game-rating{
+    font-weight: 500;
+    margin-bottom: 1rem;;
+}
+
+i{
+    margin-right: 5px;;
+}
+
+@media screen and (max-width: 1100px) {
+    .game-list-item img{
+        width: 100%;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .game-list-item .image-box{
+        padding: 1rem;
+        width: 60%;
+    
+    }
+    .game-list-item {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .game-list-item img {
+        width: 100%;
+    }
+
+    .game-list-item .game-list-detail {
+        text-align: center;
+    }
+
+    .game-list-action {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 576px) {
+    .game-list-item .image-box{
+        width: 80%;
+    }
+
+}
 /* 
     .p-dropdown {
         width: 14rem;
